--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Aditya and i am the developer
+            Hi! I am Aditya and i am a experienced developer.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
