[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,6 +6,7 @@
      <div>
          Feburary 22, 2018
      </div>
+     <h3>Article one</h3>
      <div>
          <p>
              The article contains all the shit that runs through my mind.
