--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,22 +1,28 @@
 <html>
     <head>
         <title>Article one by Aditya Ahuja</title>
+        <style>
+            
+            
+        </style>
     </head>
  <body>
+     <div class='container'>
           <h3>Article one</h3>
      <div>
          Feburary 22, 2018
      </div>
-     <div>
-         <p>
-             The article contains all the shit that runs through my mind.
-         </p>
-         <p>
-            Not so important paragraph. don't waste your time reaing this. Get a life 
-         </p>
-         <p>
-             if you are reading keep one thing in mind that you are a complete asshole fuckface dickhead.
-         </p>
+         <div>
+             <p>
+               The article contains all the shit that runs through my mind.
+             </p>
+              <p>
+               Not so important paragraph. don't waste your time reaing this. Get a life 
+             </p>
+             <p>
+               if you are reading keep one thing in mind that you are a complete asshole fuckface dickhead.
+             </p>
+          </div>
      </div>
  </body>    
 </html>
