--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,12 @@
     <head>
         <title>Article one by Aditya Ahuja</title>
         <style>
-            
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
             
         </style>
     </head>
