[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -12,6 +12,7 @@
         </style>
     </head>
  <body>
+     <a href= '/'>Home</a>
      <div class='container'>
           <h3>Article one</h3>
      <div>
