--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,10 +3,14 @@
         <title>Article one by Aditya Ahuja</title>
         <style>
             .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
+                    max-width: 800px;
+                      margin: 0 auto;
+                      color: #711414;
+                    font-family: sans-serif;
+                     padding-top: 60px;
+                     padding-left: 20px;
+                     padding-right: 20px;
+}
             }
             
         </style>
