[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,23 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/16997755_1340976999321326_978790503279334296_n.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div class="center text-big bold">
-            Hi! I am Aditya and i am a experienced developer.
+        <h3>Personel</h3>
+        <div>
+            Hi! I am Aditya Ahuja.
         </div>
-     
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+            I am currently pursuing my bachelor degree in computer science.
+        </div>
+        <hr/>
+        <div class="footer">
+            
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
