[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/16997755_1340976999321326_978790503279334296_n.jpg" class="img-medium"/>
+            <img id="madi" src="https://lh3.googleusercontent.com/-Eh2Bup0_4Do/VeB3PqLSZpI/AAAAAAAAAA0/MXI7ZR2oZl0ZgDBpSQ2T83krLk1MDRWKwCEwYBhgL/w140-h140-p/bf811d58-3c9f-4c85-a48e-dfd4167408d5" class="img-medium"/>
         </div>
         <hr/>
         <br>
@@ -16,7 +16,7 @@
         <hr/>
         <h3>Professional</h3>
         <div>
-            I am currently pursuing my bachelor degree in computer science.
+            I am currently pursuing my bachelor degree in computer science field.
         </div>
         <hr/>
         <div class="footer">
