[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img id="madi" src="https://lh3.googleusercontent.com/-Eh2Bup0_4Do/VeB3PqLSZpI/AAAAAAAAAA0/MXI7ZR2oZl0ZgDBpSQ2T83krLk1MDRWKwCEwYBhgL/w140-h140-p/bf811d58-3c9f-4c85-a48e-dfd4167408d5" class="img-medium"/>
         </div>
@@ -24,5 +25,6 @@
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+ </div>        
     </body>
 </html>
