--- a/ui/index.html
+++ b/ui/index.html
@@ -25,11 +25,8 @@
         </div>
         <hr/>
          <input type="text" id="name" placeholder="name"></input>
-         <input type="submit" name="Submit"></input>
+         <input type="submit" name="Submit" id="submit_btn"></input>
          <ul>
-             <li>name1</li>
-             <li>name2</li>
-             <li>name3</li>
              
          </ul>
         <script type="text/javascript" src="/ui/main.js">
