--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
         <hr/>
          <input type="text" id="name" placeholder="name"></input>
          <input type="submit" name="Submit" id="submit_btn"></input>
-         <ul>
+         <ul id="namelist">
              
          </ul>
         <script type="text/javascript" src="/ui/main.js">
